2002-03-08  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ,ReadMe updated
	* docs/FAQ.html and ReadMe.html updated
	* docs/xml: makefile, makefile.win32 renames docs.html to ReadMe.html
	* docs/xml: faq.xml, docs.xml updated
	* docs/xml: *.xsl, docs.dtd with extref1,extref2 you can link 
	  between the FAQ and Documentation

2002-03-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: also set quality when creating items on ground

2002-03-07  Max Horn  <max@quendi.de>
	* tools/ipack.cc, tools/textpack.cc: fixed compile problems with gcc 3

2002-03-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/imagewin.h: include <string>
	* imagewin/imagewin.cc: include utils.h

2002-03-06  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, exultmenu.cc, gumps/VideoOptions_gump.cc,
	  imagewin/imagescl.cc, imagewin/imagewin.*, imagewin/scale.* :
	  Added Kreed's BilinearPlus scaler. Also added some utility functions
	  and an array to get the scalers names, and the scaler number of a 
	  name. Should simplify adding or removing scalers in the future.
	  Updated all the various parts of Exult to use the new funcs.

2002-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* server/server.cc: Handle ::view_pos message from ExultStudio.
	* gamewin.cc:  Public set_scrolls(tx, ty) added.
	* mapedit/locator.cc:  Locator scrollbars update view in Exult.

2002-03-05  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc , gumps/GameplayOptions_gump.*, gumps/Gump_manager.*
	  gumps/gump_utils.cc : Right click now closes all gumps. Added config
	  setting and updated game options gump with the setting. The setting
	  also effects Modal gumps which previously always closed on a right
	  click. Default enabled.

2002-03-03  Jeff Freedman  <jeff@amy.nerble.net>

	* tools/ipack.cc,ipack.txt:  Can now have all 'flat' frames in a
	single tiled file.

2002-02-27  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Spark is NOT a ghost.